--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My app</title>
+    <title>Profile</title>
     <meta charset="UTF-8" />
+  <meta http-equiv="Content-Security-Policy" content="*">
     <base href="/">
   </head>
   <body>
