change to build dir

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>Profile</title>
-    <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="*">
+    <meta charset="UTF-8" /> <meta http-equiv="Access-Control-Allow-Origin: *" />
+ 
     <base href="/">
   </head>
   <body>
